
== Unreleased

=== fixes
* https://github.com/docToolchain/docToolchain/issues/720[#720 Fix gradlew.bat]
* Fixes typo in dtcw.bat for finding the correct local cli command.
* https://github.com/docToolchain/docToolchain/issues/851[#851 fix duplicate TOC marker]
* https://github.com/docToolchain/docToolchain/issues/853[#853 Hide site links when not configured]

=== added

=== changed
2022-05-08::
* updated available languages for arc42 template

== 2.0.5 - 2022-03-10

=== fixes

2022-03-08::
* downloadTemplate: fix encoding for working with powershell
* https://github.com/docToolchain/docToolchain/pull/821[#821 exportPPT is broken since 2.x]
2022-02-25::
* https://github.com/docToolchain/docToolchain/pull/803[#764 order :jbake-order: numerical]
2021-12-20::
* brushed up docs
2021-12-06::
* https://github.com/docToolchain/docToolchain/pull/711[#712 - publishToConfluence fails when no hash is available for an uploaded image]
2022-01-23::
* https://github.com/docToolchain/docToolchain/pull/757[#757 - CI: Fix problem in ci-scrip]
2021-12-06::
* https://github.com/docToolchain/doctoolchain.github.io/issues/20[#20 some wget versions throw errors]
* https://github.com/docToolchain/doctoolchain.github.io/issues/19[#19 the wrapper stops if no java installed but you want to use docker]
2021-11-26::
* https://github.com/docToolchain/doctoolchain.github.io/issues/18[#18 gradle daemon has memory problems]
2021-11-15::
* https://github.com/docToolchain/docToolchain/pull/696[#696 - exportContributors - not everybody is rendered]
* https://github.com/docToolchain/docToolchain/pull/697[#697 - exportToMarkdown docs are not referenced correctly]

=== added

2022-03-16::
* https://github.com/docToolchain/docToolchain/pull/825[#825 - publishToConfluence: support swagger-open-api]

2021-12-09::
* https://github.com/docToolchain/docToolchain/pull/714[#714 - Update exportExcel.gradle]

2021-11-30::