@@ -12,9 +12,13 @@ try {
                 title: page['jbake-title'],
                 order: page['jbake-order'],
                 filename: page['filename'],
-                uri: page['uri']
+                uri: page['uri'],
+                children: []
             ]
         }
+    }
+    menu = menu.collectEntries {k, v -> 
+        [k, makeHierachical(v) ]
     }
     // first, use all menu codes which are defined in the config
     if (config.site_menu==null) {
@@ -54,15 +58,15 @@ try {
         def (title, entries) = data
         if (entries[0]) {
             if (title!="-" ) {
-                def firstEntry = entries.sort { a, b -> a.order <=> b.order ?: a.title <=> b.title }[0]
-                def url = "${content.rootpath}${firstEntry.uri}"
+                def firstEntryUri = findFirstUri(entries)
+                def url = "${content.rootpath}$firstEntryUri"
                 def basePath = url.replaceAll('[^/]*$', '')
                 def isActive = ""
                 if ((content.rootpath + content.uri)?.startsWith(basePath)) {
                     isActive = "active"
                 }
                 //System.out.println "   $title"
-                newEntries << [isActive: isActive, href: "${content.rootpath}${entries.find { it.order == 0 }?.uri ?: entries[0].uri}", title: title]
+                newEntries << [isActive: isActive, href: url, title: title]
             }
         }
     }
@@ -72,6 +76,88 @@ try {
 >>> menu.gsp: (2) ${e.message}
 
 """
+}
+
+def makeHierachical(def entries) {
+    def tree = asTree(entries.collect { it.uri.split('/') })
+    def map = tree
+    def prefix = ''
+    while(map.size() == 1 && !map.values().first().isEmpty()) {
+        def key = map.keySet().first()
+        prefix = prefix + key + '/'
+        map = map[key]
+    }
+
+    result = processMap(entries, prefix, map, true)
+    return result
+}
+
+def processMap(def originalEntries, String prefix, def map, boolean skipIndex) {
+    return map.entrySet()
+        .findAll { entry -> skipIndex || entry.key != 'index.html' }
+        .collect { entry ->
+            def candidate;
+            if(entry.key.endsWith(".html")) {
+                candidate = originalEntries.find {it.uri == prefix + entry.key }
+            } else {
+                def index = originalEntries.find {it.uri == prefix + entry.key + '/index.html'}
+                if(index != null) {
+                    candidate = index;
+                    if(candidate.order == '0') {
+                        def t = entry.key;
+                        def matcher = t =~ /^([0-9]+)_(.*)$/
+                        if(matcher.matches()) {
+                            def o = matcher.group(1)
+                            candidate.order = o
+                        }
+                    }
+                } else {
+                    def t = entry.key;
+                    def o = null
+                    def matcher = t =~ /^([0-9]+)_(.*)$/
+                    if(matcher.matches()) {
+                        o = matcher.group(1)
+                        t = matcher.group(2)
+                    }
+                    candidate = [
+                        title: t,
+                        order: o,
+                        filename: null,
+                        uri: null,
+                        children: []
+                    ]
+                }
+            }
+            if(!entry.value.isEmpty()) {
+                candidate['children'] = processMap(originalEntries, prefix + entry.key + '/', entry.value, false)
+            }
+            return candidate
+        }
+}
+
+def Map<String, ?> asTree(List<List<String>> list) {
+    if(list == [[]]) {
+        return [:]
+    } else {
+        return list
+                .groupBy { it.head() }
+                .collectEntries { k, v -> [k, asTree(v.collect {it.tail()}) ] }
+    }
+}
+
+def String findFirstUri(def entries) {
+    def indexEntry = entries.find { it.order == '0' }
+    if(indexEntry && indexEntry.uri) {
+        return indexEntry.uri
+    }
+    def firstEntry = entries.sort { a, b -> a.order as Integer <=> b.order as Integer ?: a.title <=> b.title }[0]
+    if (firstEntry) {
+        if(firstEntry.uri) {
+            return firstEntry.uri
+        }
+        return findFirstUri(firstEntry.children)
+    }
+    return ''
 }
 
 //store results to be used in other templates
